Fix most of the noisy bugs, fully responsive now

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			</div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>De formation Master Informatique spécialité Image (Bac+4) à Lyon, et joueur actif depuis ma plus tendre enfance. Je suis passionné par la programmation et le graphisme et réalise aujourd'hui des prototypes de jeux pour apprendre à utiliser les moteurs les plus appréciés du secteur vidéoludique (Unity/Unreal Engine 4) et à développer pour les langages C# et C++.</p>
+                    <p>De formation Master Informatique spécialité Image (Bac+4) à Lyon, et joueur actif depuis ma plus tendre enfance. Je suis passionné par la programmation et le graphisme et réalise aujourd'hui des prototypes de jeux pour apprendre à utiliser les moteurs les plus appréciés du secteur vidéoludique <b>Unity</b> et <b>Unreal Engine 4</b> et à développer pour les langages <b>C# et C++</b>.</p>
                 </div>
                 <div class="col-lg-4">
                      <p>Je me documente aussi régulièrement sur les nouveautés (techniques et actualités) dans ce domaine. Les shaders, l'IA et la programmation de moteurs de jeux me passionnent également.</p>
@@ -170,7 +170,7 @@
                                 <h4>
                                     <strong>Programmation</strong>
                                 </h4>
-                                <p>Mon parcours m'a permis d'avoir une polyvalence en terme de langages de programmation, je suis opérationnel en C++, C# et Java, et j'ai des notions en développement web (Html, CSS, PHP, servlets, Spring), en Python 3 et en Visual Basic.</p>
+                                <p>Mon parcours m'a permis d'avoir une polyvalence en terme de langages de programmation, je suis opérationnel en <b>C++, C# et Java</b>, je suis également opérationnel pour du développement Web en C#.Net et en React ainsi qu'en Html, CSS, PHP et j'ai des notions servlets, Spring, en Python 3 et en Visual Basic.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
